# phreeqc3

./: .gitignore  .gitlab-ci.yml  AppendixA.fm  Basic.fm  CMakeLists.txt  CReaction.cpp  CReaction.h  CTestConfig.cmake  ChartHandler.cpp  ChartHandler.h  ChartObject.cpp  ChartObject.h  Classes.cpp  Classes.h  CurveObject.cpp  CurveObject.h  Dictionary.cxx  Dictionary.h  ExchComp.cxx  ExchComp.h  Exchange.cxx  Exchange.h  Form1.h  GasComp.cxx  GasComp.h  GasPhase.cxx  GasPhase.h  HTO_rad.tsv  ISolution.cxx  ISolution.h  ISolutionComp.cxx  ISolutionComp.h  Keywords.cpp  Keywords.h  KineticsComp.cxx  KineticsComp.h  KineticsCxx.cxx  KineticsCxx.h  Makefile  Makefile.am  (+263 more)
.github/: subtrees.json  superprojects.json
BrackishWater/: RunPhreeqc.R  test.csv  test.txt  test.xlsx
Clara-PEST/: 00_kin_20160528.xlsx  beopest_1Dmodel.bat
FromClara210805/: FittingRuns.txt  R-Plots.txt  beopest_1Dmodel.bat  figures.bat
HTML/: UpdateContents.bash  fixup_html.bash  fixup_html_sed.txt  gas_binary_parameters.htm  mean_gammas.htm  phreeqc3-1.htm  phreeqc3-10.htm  phreeqc3-102.htm  phreeqc3-104.htm  phreeqc3-11.htm  phreeqc3-12.htm  phreeqc3-13.htm  phreeqc3-14.htm  phreeqc3-15.htm  phreeqc3-16.htm  phreeqc3-17.htm  phreeqc3-18.htm  phreeqc3-19.htm  phreeqc3-2.htm  phreeqc3-20.htm  phreeqc3-21.htm  phreeqc3-22.htm  phreeqc3-23.htm  phreeqc3-24.htm  phreeqc3-25.htm  phreeqc3-26.htm  phreeqc3-27.htm  phreeqc3-28.htm  phreeqc3-29.htm  phreeqc3-3.htm  phreeqc3-30.htm  phreeqc3-31.htm  phreeqc3-32.htm  phreeqc3-33.htm  phreeqc3-34.htm  phreeqc3-35.htm  phreeqc3-36.htm  phreeqc3-37.htm  phreeqc3-38.htm  phreeqc3-39.htm  (+68 more)
HTMLversion/: AppendixA.fm  Basic.fm  CMakeLists.txt  contents.hhc  contents.template.hhc  front.fm  input.fm  intro.fm  phreeqc3.book  phreeqc3.hhp  rate-parameters_pk.htm  refs.fm
OtherDatabases/: CEMDATAURL.txt
PhreeqcKeywords/: Keywords.cpp
QBasic/: Phreeqc.h  QBasic.h  global.h  global_structures.h
Version3/: AppendixA.fm  Basic.fm  cover.fm  examples.fm  front.fm  input.fm  intro.fm  phreeqc3.book  refs.fm  text.backup.fm  text.fm
classes/: Conc.cxx  Makefile  NumKeyword.cxx  Pe_Data.cxx  Pe_Data.h  Solution.h  TestCIsotope.h  TestCParser.cxx  TestCSolution.cxx  TestCSolution.h  test.cxx  utilities.h
common/: .gitlab-ci.yml  PHRQ_exports.h  PHRQ_io.cpp  PHRQ_io.h  Parser.cxx  Utils.cxx
database/: .gitlab-ci.yml  CMakeLists.txt  Makefile.am
database/.github/: superprojects.json
database/SIT/: sit-phreeqc.doc  sit-total.txt
database/isotopes/basic/: iso2.bas  iso3revised.bas  iso4.bas  iso4revised.bas
database/redox/: Acetate-Goethite.pqi
doc/: .gitlab-ci.yml  CMakeLists.txt  Makefile.am  README.IPhreeqc.TXT  README.Linux.txt  README.Phreeqc.TXT  README.Phreeqc.txt  README.PhreeqcI.TXT  README.TXT  README.Win.txt  README.Win.txt.xxx  RELEASE.TXT  phreeqc.txt
examples/: .gitlab-ci.yml  CMakeLists.txt  Makefile  Makefile.am  Makefile.old  Zn1e_4  current1  ex1.out  ex10  ex10.out  ex10.sel  ex11  ex11.out  ex11adv.sel  ex11trn.sel  ex12  ex12.out  ex12.sel  ex12a  ex12a.out  ex12a.sel  ex12b  ex12b.out  ex13a  ex13a.out  ex13ac  ex13ac.out  ex13b  ex13b.out  ex13c  ex13c.out  ex13c.sel  ex14  ex14.out  ex14.sel  ex15  ex15.out  ex15.sel  ex15a  ex15a.out  (+52 more)
examples/examples_pc/: co2.tsv  ex1.out  ex10.out  ex10.sel  ex11.out  ex11trn.sel  ex12.out  ex12.sel  ex12a  ex12a.out  ex12a.sel  ex13a.sel  ex13ac.out  ex13b.out  ex13c  ex13c.out  ex13c.sel  ex14.out  ex15.out  ex15.sel  ex15a  ex15b.out  ex16.out  ex17b.out  ex18.out  ex19  ex19b  ex19b.out  ex2.sel  ex20-c13.tsv  ex20-c14.tsv  ex20a.out  ex20b  ex20b.out  ex21.out  ex21_Cl_tr_rad.tsv  ex21_HTO_rad.tsv  ex22.out  ex2b.tsv  ex3  (+13 more)
examples_pc/: Makefile  ex1  ex1.out  ex10  ex10.out  ex11  ex11.out  ex11adv.sel  ex12  ex12.out  ex12.sel  ex12a.out  ex12a.sel  ex13a  ex13a.out  ex13ac  ex13ac.out  ex13b  ex13b.sel  ex13c.out  ex14  ex14.sel  ex15  ex15.out  ex15a.out  ex15b  ex16  ex17  ex17.out  ex17b  ex17b.out  ex18  ex18.out  ex19.out  ex19b.out  ex2.out  ex2.sel  ex20a  ex20a.out  ex21  (+17 more)
msi/: License.rtf  Product.wxs  Version.wxi  msi.sln  msi.wixproj
mytest/: (NH4)2SO4_101.sel  14C_isotopes  14C_isotopes.out  14C_isotopes_101.sel  25.prn  Amm  As  (+1679 more)
src/: .gitlab-ci.yml  CReaction.cpp  CReaction.h  ChartHandler.cpp  ChartHandler.h  ChartObject.cpp  ChartObject.h  Classes.cpp  Conc.cxx  Conc.h  CurveObject.cpp  CurveObject.h  Dictionary.cpp  Dictionary.cxx  Dictionary.h  Element.cpp  Element.h  ExchComp.cxx  ExchComp.h  Exchange.cxx  Exchange.h  Form1.h  GNUmakefile  GasComp.cxx  GasComp.h  GasPhase.cxx  GasPhase.h  ISolution.cxx  ISolution.h  ISolutionComp.cxx  ISolutionComp.h  Inverse.cpp  Inverse.h  Isotope.cxx  Isotope.h  Keywords.cpp  Keywords.h  KineticsComp.cxx  KineticsComp.h  Logk.cpp  (+154 more)
src/.github/: subtrees.json  superprojects.json
src/.github/workflows/: lint-subtrees.yml  subtree.yml
src/PhreeqcKeywords/: Keywords.cpp  Keywords.h
src/QBasic/: QBasic.cpp
src/Sun/examples/: ex11trn.sel  ex12.out  ex12a.sel  ex13a.sel  ex13b.out  ex13c.out  ex14.sel  ex15.sel  ex16.out  ex18.out  ex2.sel  ex3.out  ex4.out  ex5.sel  ex6C.sel  ex8.out
src/classes/: Conc.h  Isotope.cxx  Isotope.h  NumKeyword.h  Parser.cxx  Parser.h  Solution.cxx  TestCIsotope.cxx  TestCParser.h  main.cxx  utilities.cxx
src/common/: .gitlab-ci.yml  PHRQ_base.cxx  PHRQ_io.cpp  Parser.cxx  Parser.h  Utils.cxx  Utils.h
src/common/.github/: superprojects.json
src/common/.github/workflows/: lint-superprojects.yml
src/phreeqc/: Form1.h  Makefile  PHRQ_io_output.cpp  advection.cpp  basicsubs.cpp  cl1.cpp  global_structures.h  integrate.cpp  inverse.cpp  kinetics.cpp  mainsubs.cpp  model.cpp  phreeqc.rev  pitzer.cpp  pitzer_structures.cpp  prep.cpp  print.cpp  read.cpp  readtr.cpp  sit.cpp  spread.cpp  step.cpp  structures.cpp  tally.cpp  tidy.cpp  transport.cpp  utilities.cpp
test/: Makefile.am  check.sh  clean.sh  ex1  ex10  ex11  ex12  ex12a  ex13a  ex13ac  ex13b  ex13c  ex14  ex15  ex15a  ex15b  ex16  ex17  ex17b  ex18  ex19  ex19b  ex2  ex20a  ex20b  ex21  ex22  ex2b  ex3  ex4  ex5  ex6  ex7  ex8  ex9  test.sh
(+1742 files in other folders)
