# Docs
#
examplesdir = $(docdir)/examples

dist_examples_DATA = $(EXAMPLES)

EXAMPLES= \
	ex1 \
	ex2 \
	ex2b \
	ex2b.tsv \
	ex3 \
	ex4 \
	ex5 \
	ex6 \
	ex7 \
	ex8 \
	ex9 \
	ex10 \
	ex11 \
	ex12 \
	ex12a \
	ex13a \
	ex13ac \
	ex13b \
	ex13c \
	ex14 \
	ex15 \
	ex15a \
	ex15b \
	ex15.dat \
	ex16 \
	ex17 \
	ex17b \
	ex18 \
	ex19 \
	ex19_meas.tsv \
	ex19b \
	ex20a \
	ex20b \
	ex20-c13.tsv \
	ex20-c14.tsv \
	ex20_open \
	ex21 \
	ex21_Cl_tr_rad.tsv \
	ex21_Cs_rad.tsv \
	ex21_HTO_rad.tsv \
	ex21_Na_tr_rad.tsv \
	ex22 \
	Zn1e_4 \
	Zn1e_7
