AM_CPPFLAGS=-I$(top_srcdir)/src -I$(top_srcdir)/src/phreeqc

bin_PROGRAMS = phreeqc

# sources for phreeqc
phreeqc_SOURCES=\
	class_main.cpp\
	cxxKinetics.cxx\
	cxxKinetics.h\
	cxxMix.cxx\
	cxxMix.h\
	dumper.cpp\
	dumper.h\
	Exchange.cxx\
	Exchange.h\
	ExchComp.cxx\
	ExchComp.h\
	GasComp.cxx\
	GasComp.h\
	GasPhase.cxx\
	GasPhase.h\
	ISolution.cxx\
	ISolution.h\
	ISolutionComp.cxx\
	ISolutionComp.h\
	Keywords.cpp\
	Keywords.h\
	KineticsComp.cxx\
	KineticsComp.h\
	NameDouble.cxx\
	NameDouble.h\
	NumKeyword.cxx\
	NumKeyword.h\
	Parser.cxx\
	Parser.h\
	PBasic.cpp\
	PBasic.h\
	Phreeqc.cpp\
	Phreeqc.h\
	PHRQ_base.cxx\
	PHRQ_base.h\
	PHRQ_io.cpp\
	PHRQ_io.h\
	PPassemblage.cxx\
	PPassemblage.h\
	PPassemblageComp.cxx\
	PPassemblageComp.h\
	Pressure.cxx\
	Pressure.h\
	Reaction.cxx\
	Reaction.h\
	ReadClass.cxx\
	runner.cpp\
	runner.h\
	Solution.cxx\
	Solution.h\
	SolutionIsotope.cxx\
	SolutionIsotope.h\
	SSassemblage.cxx\
	SSassemblage.h\
	SS.cxx\
	SS.h\
	SScomp.cxx\
	SScomp.h\
	StorageBin.cxx\
	StorageBin.h\
	StorageBinList.cpp\
	StorageBinList.h\
	Surface.cxx\
	Surface.h\
	SurfaceCharge.cxx\
	SurfaceCharge.h\
	SurfaceComp.cxx\
	SurfaceComp.h\
	System.cxx\
	System.h\
	Temperature.cxx\
	Temperature.h\
	Use.cpp\
	Use.h\
	Utils.cxx\
	Utils.h\
	advection.cpp\
	basicsubs.cpp\
	cl1.cpp\
	cvdense.cpp\
	cvdense.h\
	cvode.cpp\
	cvode.h\
	dense.cpp\
	dense.h\
	dw.cpp\
	gases.cpp\
	global_structures.h\
	input.cpp\
	integrate.cpp\
	inverse.cpp\
	isotopes.cpp\
	kinetics.cpp\
	mainsubs.cpp\
	model.cpp\
	NA.h\
	nvector.cpp\
	nvector.h\
	nvector_serial.cpp\
	nvector_serial.h\
	parse.cpp\
	phqalloc.cpp\
	phqalloc.h\
	PHRQ_io_output.cpp\
	phrqtype.h\
	pitzer.cpp\
	pitzer_structures.cpp\
	prep.cpp\
	print.cpp\
	read.cpp\
	readtr.cpp\
	sit.cpp\
	smalldense.cpp\
	smalldense.h\
	spread.cpp\
	step.cpp\
	structures.cpp\
	sundialsmath.cpp\
	sundialsmath.h\
	sundialstypes.h\
	tally.cpp\
	tidy.cpp\
	transport.cpp\
	utilities.cpp

if BUILD_GMP

phreeqc_SOURCES+=\
	cl1mp.cpp

endif


LDADD = $(LIBGMP)
