EXTRA_DIST=CMakeLists.txt

# Docs
#
databasedir=$(docdir)/database

dist_database_DATA=$(DATABASE)

DATABASE=\
	Amm.dat\
	ColdChem.dat\
	core10.dat\
	frezchem.dat\
	iso.dat\
	kinec.v2.dat\
	llnl.dat\
	minteq.dat\
	minteq.v4.dat\
	PHREEQC_ThermoddemV1.10_15Dec2020.dat\
	phreeqc.dat\
	phreeqc_rates.dat\
	pitzer.dat\
	sit.dat\
	Tipping_Hurley.dat\
	wateq4f.dat
