AM_CPPFLAGS=-I$(top_srcdir)/src -I$(top_srcdir)/src/phreeqc

bin_PROGRAMS = phreeqc

# sources for phreeqc
phreeqc_SOURCES=\
	class_main.cpp\
	cxxKinetics.cxx\
	cxxKinetics.h\
	cxxMix.cxx\
	cxxMix.h\
	dumper.cpp\
	dumper.h\
	Exchange.cxx\
	Exchange.h\
	ExchComp.cxx\
	ExchComp.h\
	GasComp.cxx\
	GasComp.h\
	GasPhase.cxx\
	GasPhase.h\
	ISolution.cxx\
	ISolution.h\
	ISolutionComp.cxx\
	ISolutionComp.h\
	Keywords.cpp\
	Keywords.h\
	KineticsComp.cxx\
	KineticsComp.h\
	NameDouble.cxx\
	NameDouble.h\
	NumKeyword.cxx\
	NumKeyword.h\
	Parser.cxx\
	Parser.h\
	PBasic.cpp\
	PBasic.h\
	Phreeqc.cpp\
	Phreeqc.h\
	PHRQ_base.cxx\
	PHRQ_base.h\
	PHRQ_io.cpp\
	PHRQ_io.h\
	PPassemblage.cxx\
	PPassemblage.h\
	PPassemblageComp.cxx\
	PPassemblageComp.h\
	Pressure.cxx\
	Pressure.h\
	Reaction.cxx\
	Reaction.h\
	ReadClass.cxx\
	runner.cpp\
	runner.h\
	Solution.cxx\
	Solution.h\
	SolutionIsotope.cxx\
	SolutionIsotope.h\
	SSassemblage.cxx\
	SSassemblage.h\
	SS.cxx\
	SS.h\
	SScomp.cxx\
	SScomp.h\
	StorageBin.cxx\
	StorageBin.h\
	StorageBinList.cpp\
	StorageBinList.h\
	Surface.cxx\
	Surface.h\
	SurfaceCharge.cxx\
	SurfaceCharge.h\
	SurfaceComp.cxx\
	SurfaceComp.h\
	System.cxx\
	System.h\
	Temperature.cxx\
	Temperature.h\
	Use.cpp\
	Use.h\
	Utils.cxx\
	Utils.h\
	phreeqc/advection.cpp\
	phreeqc/basicsubs.cpp\
	phreeqc/cl1.cpp\
	phreeqc/cvdense.cpp\
	phreeqc/cvdense.h\
	phreeqc/cvode.cpp\
	phreeqc/cvode.h\
	phreeqc/dense.cpp\
	phreeqc/dense.h\
	phreeqc/dw.cpp\
	phreeqc/gases.cpp\
	phreeqc/global_structures.h\
	phreeqc/input.cpp\
	phreeqc/integrate.cpp\
	phreeqc/inverse.cpp\
	phreeqc/isotopes.cpp\
	phreeqc/kinetics.cpp\
	phreeqc/mainsubs.cpp\
	phreeqc/model.cpp\
	phreeqc/NA.h\
	phreeqc/nvector.cpp\
	phreeqc/nvector.h\
	phreeqc/nvector_serial.cpp\
	phreeqc/nvector_serial.h\
	phreeqc/parse.cpp\
	phreeqc/phqalloc.cpp\
	phreeqc/phqalloc.h\
	phreeqc/PHRQ_io_output.cpp\
	phreeqc/phrqtype.h\
	phreeqc/pitzer.cpp\
	phreeqc/pitzer_structures.cpp\
	phreeqc/prep.cpp\
	phreeqc/print.cpp\
	phreeqc/read.cpp\
	phreeqc/readtr.cpp\
	phreeqc/sit.cpp\
	phreeqc/smalldense.cpp\
	phreeqc/smalldense.h\
	phreeqc/spread.cpp\
	phreeqc/step.cpp\
	phreeqc/structures.cpp\
	phreeqc/sundialsmath.cpp\
	phreeqc/sundialsmath.h\
	phreeqc/sundialstypes.h\
	phreeqc/tally.cpp\
	phreeqc/tidy.cpp\
	phreeqc/transport.cpp\
	phreeqc/utilities.cpp

if BUILD_GMP

phreeqc_SOURCES+=\
	phreeqc/cl1mp.cpp

endif


LDADD = $(LIBGMP)
